--- a/TgdSpa/Scripts/app/views/details.html
+++ b/TgdSpa/Scripts/app/views/details.html
@@ -1,3 +1,5 @@
-﻿<div>
-<h2>Details</h2>
+﻿<div class="padding-left">
+    <h2 data-bind="text: note().Title"></h2>
+    <pre data-bind="text: note().Content"></pre>
+    <a href="#">Back to list</a>
 </div>
