--- a/TgdSpa/Scripts/app/views/list.html
+++ b/TgdSpa/Scripts/app/views/list.html
@@ -2,9 +2,9 @@
     <div class="padding-left">
         <h2>
             List</h2>
-        <button class="btn btn-primary" data-bind="click: addNote">
+        <button data-bind="click: addNote">
             Add note</button>
-        <form data-bind="submit: search">
+        <form action="" data-bind="submit: search">
         <div class="input-control text span6 as-inline-block">
             <input placeholder="Enter search phrase..." type="text" data-bind="value: filter" />
             <button class="btn-search">
